# libNIM

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: counter.h  libNIM.h
src/: CMakeLists.txt  libNIM.cpp
test/: main.cpp
